content/renderer/media/webmediaplayer_ms_compositor.cc
@@ -14,6 +14,7 @@
 #include "cc/paint/paint_surface.h"
 #include "content/renderer/media/webmediaplayer_ms.h"
 #include "content/renderer/render_thread_impl.h"
+#include "media/base/media_log.h"
 #include "media/base/media_switches.h"
 #include "media/base/video_frame.h"
 #include "media/base/video_util.h"
@@ -129,9 +130,11 @@ scoped_refptr<media::VideoFrame> CopyFrame(
 WebMediaPlayerMSCompositor::WebMediaPlayerMSCompositor(
     const scoped_refptr<base::SingleThreadTaskRunner>& compositor_task_runner,
     const blink::WebMediaStream& web_stream,
-    const base::WeakPtr<WebMediaPlayerMS>& player)
+    const base::WeakPtr<WebMediaPlayerMS>& player,
+    scoped_refptr<media::MediaLog> media_log)
     : compositor_task_runner_(compositor_task_runner),
       player_(player),
+      media_log_(std::move(media_log)),
       video_frame_provider_client_(nullptr),
       current_frame_used_by_compositor_(false),
       last_render_length_(base::TimeDelta::FromSecondsD(1.0 / 60.0)),
@@ -153,7 +156,8 @@ WebMediaPlayerMSCompositor::WebMediaPlayerMSCompositor(
     base::AutoLock auto_lock(current_frame_lock_);
     rendering_frame_buffer_.reset(new media::VideoRendererAlgorithm(
         base::Bind(&WebMediaPlayerMSCompositor::MapTimestampsToRenderTimeTicks,
-                   base::Unretained(this))));
+                   base::Unretained(this)),
+        media_log_));
   }
 
   // Just for logging purpose.
@@ -458,7 +462,8 @@ void WebMediaPlayerMSCompositor::SetAlgorithmEnabledForTesting(
   if (!rendering_frame_buffer_) {
     rendering_frame_buffer_.reset(new media::VideoRendererAlgorithm(
         base::Bind(&WebMediaPlayerMSCompositor::MapTimestampsToRenderTimeTicks,
-                   base::Unretained(this))));
+                   base::Unretained(this)),
+        media_log_));
   }
 }
 
